2001-01-26  Dekel Tsur  <dekelts@tau.ac.il>

	* vspace.C (isValidLength): Fix for empty input string.

2001-01-26  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* LyXAction.C (init): change description of LFUN_FIGURE to
	"Insert Graphics"

2001-01-25  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* LaTeX.C: add using directive

2001-01-24  Dekel Tsur  <dekelts@tau.ac.il>

	* MenuBackend.C (expand): Fix the sorting of the formats.

2001-01-24  John Levon  <moz@compsoc.man.ac.uk>

	* lyx_main.C: tiny error message fix

2001-01-24  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* lyx_gui.C (LyXGUI): force the LC_NUMERIC locale to "C" after
	calling fl_initialize(). This fixes the problem with ',' as
	decimal separator in text files.

2001-01-24  Dekel Tsur  <dekelts@tau.ac.il>

	* trans.C (process): Fix the keymap bug.

2001-01-23  Dekel Tsur  <dekelts@tau.ac.il>

	* LaTeX.C (scanAuxFiles): New method. Provides support for
	multiple bibliographies (when using the bibtopic/bibunits pacakges).
	(scanLogFile) Scan for "run BibTeX" messages.

	* buffer.C (makeLaTeXFile): Do not load the ae package when using
	OT1 font encoding. Also, load the aecompl package if the ae
	package is loaded.

	* tex-strings.C: Add "ae" to tex_fonts[] (from Matej Cepl).

2001-01-22  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* texrow.C (increasePos): turn two error messages into debug
	messages. 

2001-01-20  Dekel Tsur  <dekelts@tau.ac.il>

	* LaTeX.C (scanAux): Handle the \@input macro.
	(runBibTeX): Use scanAux().

	* language.C (latex_options_): New field.

	* LaTeXFeatures.C (getMacros): Add language macros.

	* buffer.C (makeLaTeXFile): Small fix.

2001-01-19  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* lyxfunc.C: fix the name of the inset for LFUN_CHILDINSERT

	* text2.C: add a using directive.

2000-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* BufferView2.C:
	* lyx_gui_misc.h:
	* lyxfr1.C:
	* lyxfunc.C: kill LyXBell.
