@@ -1,3 +1,7 @@
+2001-01-27  Dekel Tsur  <dekelts@tau.ac.il>
+
+	* converter.C (dvipdfm_options): New method.
+
 2001-01-26  Dekel Tsur  <dekelts@tau.ac.il>
 
 	* vspace.C (isValidLength): Fix for empty input string.
